fix: 마지막 자식 요소의 마진 수정

--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -469,6 +469,9 @@ section[id] { scroll-margin-top: 84px; }
   border-radius:.5rem;
   opacity:.95;
 }
+.notion-quote > *:last-child{
+  margin-bottom: 0;
+}
 
 /* === 콜아웃 === */
 .notion-callout{
